src/test/ui/use/use-after-move-self.nll.stderr
error[E0382]: use of moved value: `self`
  --> $DIR/use-after-move-self.rs:10:16
   |
LL |     pub fn foo(self) -> isize {
   |                ---- move occurs because `self` has type `S`, which does not implement the `Copy` trait
LL |         self.bar();
   |         ---- value moved here
LL |         return *self.x;
   |                ^^^^^^^ value used here after move

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
